--- a/src/components/addDB/addDB.html
+++ b/src/components/addDB/addDB.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>增加数据库连接</title>
+    <title>增加数据库</title>
     <link rel="stylesheet" href="../../asserts/css/iview.css"/>
 </head>
 <body>
-<div class="add-db" id="addDB">
-</div>
+    <div id="addDB">
+    </div>
 </body>
 
 <script>
@@ -78,10 +78,6 @@
 
 </script>
 <style>
-    .add-db {
-        padding: 10px;
-    }
-
     .editor {
         position: absolute;
         bottom: 0;
