--- a/src/components/addDB/addDB.html
+++ b/src/components/addDB/addDB.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>增加数据库</title>
+    <title>增加|修改数据库信息</title>
     <link rel="stylesheet" href="../../asserts/css/iview.css"/>
 </head>
 <body>
